fix login link alignment

--- a/applications/fishing-map/src/features/sidebar/CategoryTabs.module.css
+++ b/applications/fishing-map/src/features/sidebar/CategoryTabs.module.css
@@ -104,3 +104,12 @@
 .currentLanguage {
   color: var(--color-primary-blue);
 }
+
+.loginLink {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 0;
+}
